<?xml version="1.0"?>
<package format="2">
  <name>launch_files</name>
  <version>0.0.1</version>
  <description>
      The launch_files package is a collection of useful launch files, mainly for nodelets
  </description>
  <maintainer email="fspinelli@gmail.com">tabjones</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>nodelet</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>openni2_launch</exec_depend>
    <exec_depend>rosbag</exec_depend>

  <export>
  </export>
</package>
